# titan-synapse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  TEST_LOG.md  docker-compose.yml  install.sh  kaggle_synapse_train.py  package.json
config/: default.yaml
crates/synapse/: Cargo.toml
crates/synapse/src/: config.rs  dashboard.rs  main.rs  openai.rs  server.rs  streaming.rs
crates/synapse/src/arch/: expert.rs  fast_weights.rs  mamba.rs  mod.rs  synapse_model.rs  thalamus.rs  xlstm.rs
crates/synapse/src/cli/: bench.rs  eval.rs  export.rs  hub.rs  import.rs  learn.rs  mod.rs  models.rs  pull.rs  status.rs  train.rs
crates/synapse/src/format/: manifest.rs  mod.rs  packer.rs
crates/synapse/src/inference/: engine.rs  kv_cache.rs  lora.rs  mod.rs  model.rs  sampler.rs  speculative.rs
crates/synapse/src/learn/: cloud_fallback.rs  engine.rs  mod.rs
crates/synapse/src/memory/: extractor.rs  graph.rs  hallucination.rs  mod.rs
crates/synapse/src/swarm/: coordinator.rs  mod.rs  orchestrator.rs  pool.rs  spawner.rs  synthesizer.rs
crates/synapse/src/vram/: manager.rs  mod.rs
paper/: synapse_architecture.md
python/: Dockerfile.learn  requirements.txt
python/synapse_arch/: __init__.py  config.py  data.py  expert.py  fast_weights.py  mamba.py  synapse_model.py  thalamus.py  train_full.py  trainer.py  xlstm.py
python/synapse_arch/tests/: test_arch.py
python/synapse_learn/: bench_merged.py  datasets.py  merge_model.py  real_eval.py  server.py  train_base.py  train_specialists.py
